updating input variable names
Changing input variable names to conform to tapis workflow. Also changed  name of woodville_test.py to pygeoflood_full_workflow.py to be more generic

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "id": "no-interactive-conda-example",
+  "id": "pygeoflood-container",
   "version": "0.0.4",
   "description": "Run an non-interactive script on TACC using docker.",
   "owner": "${apiUserId}",
