--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "pygeoflood-container",
   "version": "0.0.4",
-  "description": "Run an non-interactive script on TACC using docker.",
+  "description": "Runs pygeoflood in a container.",
   "owner": "${apiUserId}",
   "enabled": true,
   "runtime": "SINGULARITY",
