--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "Pygeoflood-Container",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Runs pygeoflood in a container.",
   "owner": "${apiUserId}",
   "enabled": true,
@@ -33,13 +33,13 @@
           "name": "DEM",
           "description": "The name of the DEM being used (example names could be Original if unmodified DEM, Dike1 if dike is addded to DEM, Reservoir_expansion if reservoir is expanded)",
           "inputMode": "REQUIRED",
-          "arg": "DEM"
+          "arg": "Original"
         },
         {
           "name": "Streamflow",
           "description": ".csv file containing streamflow values you want to use (example names could be Event1, Event2, Harvey, etc.)",
           "inputMode": "REQUIRED",
-          "arg": "Streamflow"
+          "arg": "Test"
         }
       ],
       "schedulerOptions": [
