--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+examples/Woodville/Original.tif filter=lfs diff=lfs merge=lfs -text
